// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button Basic usage 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </button>
</bolt-button>

`;

exports[`button Button tag: a 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
>
  <a class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
     is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </a>
</bolt-button>

`;

exports[`button Button tag: button 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </button>
</bolt-button>

`;

exports[`button Button tag: link 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
>
  <a class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
     is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </a>
</bolt-button>

`;

exports[`button Button tag: reset 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
>
  <button type="reset"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </button>
</bolt-button>

`;

exports[`button Button tag: submit 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
>
  <button type="submit"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </button>
</bolt-button>

`;

exports[`button Button with an onClick attributes renders properly 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
             on-click="on-click-test"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      Button w/ onClick via attributes
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </button>
</bolt-button>

`;

exports[`button Button with an onClick param renders properly 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
             on-click="on-click-test"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      Button with onClick via param
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </button>
</bolt-button>

`;

exports[`button Button with c-bolt- class is thrown out 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      Button with outer JS-prefixed class
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </button>
</bolt-button>

`;

exports[`button Button with inner classes via Drupal Attributes 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center is-active"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      Button with inner classes
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </button>
</bolt-button>

`;

exports[`button Button with outer JS-class via Drupal Attributes 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
             class="js-click-me"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      Button with outer JS-prefixed class
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </button>
</bolt-button>

`;

exports[`button Button with outer classes via Drupal Attributes 1`] = `

<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             text-transform="none"
             class="u-bolt-padding-medium"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
    <replace-with-children class="c-bolt-button__item">
      Button with outer classes
    </replace-with-children>
    <replace-with-children class="c-bolt-button__icon is-empty">
    </replace-with-children>
  </button>
</bolt-button>

`;
